syntax = "proto3";

option go_package = "go.jclarke.tech/chord/chord_proto";

package chord_proto;

service Chord {
    rpc GetPredecessor(PredecessorRequest) returns (Node);
    rpc GetSuccessor(SuccessorRequest) returns (Node);
    rpc FindSuccessor(FindSuccessorRequest) returns (Node);
    rpc Notify(NotifyRequest) returns (Node);
    rpc Hello(HelloRequest) returns (HelloResponse);
    rpc Lookup(LookupRequest) returns (LookupResponse);
}

// Empty placeholders in case we need to add parameters in the future
message PredecessorRequest {}
message SuccessorRequest {}
message FindSuccessorRequest{}
message NotifyRequest {}
message HelloRequest {}

message LookupRequest {
    string key = 1;
}

message LookupResponse {
    bytes value = 1;
}

message Node {
    fixed32 ipv4 = 1;
    string identifier = 2;
}

message HelloResponse {
    fixed32 ipv4 = 1;
}
